# libbucket

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.org  autogen.sh  config.h.in  configure.ac  configure.in
doc/: Makefile.am  bucket  bucket.texi  version.texi
src/: Makefile.am  bucket.c  bucket.h  strlib.c  strlib.h
