dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/bucket.c)
AM_INIT_AUTOMAKE(libbucket, 1.0.4)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_RANLIB
AC_PROG_CPP

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile doc/Makefile)

